# ChangeLog for sci-mathematics/euler
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/euler/ChangeLog,v 1.19 2012/05/04 07:46:51 jdhore Exp $

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> euler-1.61.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  06 Mar 2011; Justin Lecher <jlec@gentoo.org> euler-1.61.0.ebuild:
  Correct Slots for gtk 3 introduction to tree

  19 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> euler-1.61.0.ebuild,
  +files/euler-fortify.patch:
  Added a patch to help on x86_64 pointers, closing bug #343587

  07 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/euler-xdg.patch, euler-1.61.0.ebuild:
  Changed default browser from netscape to xdg-open, now installs docs in
  standard Gentoo directories. Also added pkgconfig in DEPEND, closing bug
  #204782.

  25 Jul 2007; Samuli Suominen <drac@gentoo.org> -euler-1.60.6-r1.ebuild:
  Prune unused version, GTK+-1.2 deprecation.

  18 Jul 2007; Marcus D. Hanwell <cryos@gentoo.org>
  -files/euler-1.60.6.patch, -files/euler-1.60-compound_statements.patch:
  Pruned old version.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  05 Nov 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  euler-1.61.0.ebuild:
  stable on ppc (Bug #146590)

  17 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> euler-1.61.0.ebuild:
  Stable on amd64/x86 wrt bug #146590.

  04 Apr 2006; Markus Dittrich <markusle@gentoo.org>
  +files/euler-glibc-2.4-gentoo.patch, euler-1.61.0.ebuild:
  Added patch to fix missing CLK_TCK in glibc-2.4. Thanks to
  Jaroslaw Kalinowski <jak137@o2.pl> for the patch. This 
  fixes bug #128689.

  26 Feb 2006; Markus Dittrich <markusle@gentoo.org> euler-1.60.6-r1.ebuild, ChangeLog:
  Replaced cut in global scope with function from versionator.eclass.
  This fixes bug #123961.

  12 Feb 2006; Markus Dittrich <markusle@gentoo.org>