@@ -10,6 +10,17 @@ diff -Naur euler-1.61.0/configure.in euler-1.61.0-new/configure.in
  AC_PROG_CC
  AM_PROG_CC_STDC
  AC_HEADER_STDC
+@@ -21,6 +19,10 @@
+ 
+ 
+ dnl Checks for libraries.
++dnl Check for libm for fmod()
++AC_SEARCH_LIBS([fmod], [m], [], [
++	AC_MSG_ERROR([unable to find the fmod() function])
++])
+ 
+ 
+ dnl Checks for header files.
 diff -Naur euler-1.61.0/src/Makefile.am euler-1.61.0-new/src/Makefile.am
 --- euler-1.61.0/src/Makefile.am	2005-10-30 22:48:35.000000000 +0000
 +++ euler-1.61.0-new/src/Makefile.am	2006-02-08 23:41:32.000000000 +0000
